Mon May 10 16:57:29 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/api_opvalue.cc: Add tests for OP_VALUE_RANGE to get
	  coverage of the skip_to() and check() methods of
	  ValueRangePostList.

Mon May 10 16:51:14 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/api_opvalue.cc: Add a test to get coverage of
	  ValueGePostList::skip_to().

Sun May 09 21:22:50 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/api_nodb.cc,tests/api_opvalue.cc: Move test "opvaluege1"
	  from api_nodb.cc to api_opvalue.cc, and rename to valuege3 for
	  consistency with other tests of OP_VALUE_GE.

Sun May 09 21:19:43 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/Makefile.am,tests/api_anydb.cc,tests/api_opvalue.cc: Move
	  the tests for OP_VALUE_* query operators from api_anydb.cc to
	  api_opvalue.cc.  Remove copyright statements earlier than 2007,
	  since OP_VALUE_* wasn't added until 2007.

Sun May 09 21:04:06 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/valuegepostlist.cc: Initialise valuelist in check() if
	  necessary.
	* tests/api_anydb.cc: Add regression test for this.

Thu May 06 15:03:43 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/api_replicate.cc: Add some extra debugging, to help
	  identify the problem with ticket #472.

Thu May 06 13:38:25 GMT 2010  Olly Betts <olly@survex.com>

	* common/safeuuid.h,configure.ac,INSTALL: Make use of built-in UUID API
	  on FreeBSD and NetBSD.  (ticket#470)

Thu May 06 13:10:30 GMT 2010  Olly Betts <olly@survex.com>

	* AUTHORS,Makefile.am,cmake/,configure.ac: Install files to make Xapian
	  easier to use with cmake.  Thanks to Sune Vuorela for providing the
	  desired output.

Thu May 06 11:42:16 GMT 2010  Olly Betts <olly@survex.com>

	* tests/harness/fdtracker.cc: Don't pass NULL to closedir().

Thu May 06 11:19:41 GMT 2010  Olly Betts <olly@survex.com

	* tests/api_anydb.cc: Test UUID is 36 characters long.
